--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Trisha Darure | Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
 
+  <!-- Navbar -->
+  <nav>
+    <div class="nav-container">
+      <a href="#hero" class="logo">Trisha Darure</a>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Hero -->
+  <header id="hero">
+    <h1>Trisha Darure</h1>
+    <p>Web Developer • AI & Interactive Apps</p>
+    <a href="#projects" class="btn">See My Work</a>
+  </header>
+
+  <!-- About -->
+  <section id="about">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>
+        I’m a student developer who loves building interactive web apps, games,
+        and AI-powered projects. I focus on creativity, usability, and clean design.
+      </p>
+    </div>
+  </section>
+
+  <!-- Projects -->
+  <section id="projects">
+
+    <!-- Project 1 -->
+    <div class="project-section">
+      <div class="project-info">
+        <h3>Project 1 – The Cards Know</h3>
+        <p>
+          A fun and interactive web app that showcases frontend logic,
+          APIs, and creative UI design.
+        </p>
+        <a class="demo-btn" href="https://trishadar.github.io/TheCardsKnow/" target="_blank">
+          Open Live Demo →
+        </a>
+      </div>
+
+      <iframe
+        src="https://trishadar.github.io/TheCardsKnow/"
+        title="Project 1 Live Demo">
+      </iframe>
+    </div>
+
+    <!-- Project 2 -->
+    <div class="project-section alt">
+      <div class="project-info">
+        <h3>Project 2 – Memory Map</h3>
+        <p>
+          A project focused on user interaction, visuals, and clean
+          JavaScript logic.
+        </p>
+        <a class="demo-btn" href="https://trishadar.github.io/MemoryMap/" target="_blank">
+          Open Live Demo →
+        </a>
+      </div>
+
+      <iframe
+        src="https://trishadar.github.io/MemoryMap/"
+        title="Project 2 Live Demo">
+      </iframe>
+    </div>
+
+    <!-- Project 3 -->
+    <div class="project-section">
+      <div class="project-info">
+        <h3>Project 3 – Interactive Game</h3>
+        <p>
+          A creative game built for fun and experimentation, highlighting
+          problem-solving and game mechanics.
+        </p>
+        <a class="demo-btn" href="https://your-github-username.github.io/project3" target="_blank">
+          Open Live Demo →
+        </a>
+      </div>
+
+      <iframe
+        src="https://your-github-username.github.io/project3"
+        title="Project 3 Live Demo">
+      </iframe>
+    </div>
+
+  </section>
+
+  <!-- Contact -->
+  <section id="contact">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:tpd568@my.utexas.edu">tpd568@my.utexas.edu</a></p>
+      <p>GitHub: <a href="https://github.com/trishadar" target="_blank">
+        github.com/your-github-username</a></p>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Trisha Darure</p>
+  </footer>
+
+</body>
+</html>
