added dark mode

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
+      <button id="theme-toggle" aria-label="Toggle dark mode">
+        <span class="icon">☾</span>
+        </button>
     </div>
   </nav>
 
@@ -114,6 +117,6 @@
   <footer>
     <p>&copy; 2025 Trisha Darure</p>
   </footer>
-
+  <script src="script.js"></script>
 </body>
 </html>
