--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
     <!-- Project 3 -->
     <div class="project-section">
       <div class="project-info">
-        <h3>Project 3 – Interactive Game</h3>
+        <h3>Project 3 – Why Are You Still Here</h3>
         <p>
           A creative game built for fun and experimentation, highlighting
           problem-solving and game mechanics.
         </p>
-        <a class="demo-btn" href="https://your-github-username.github.io/project3" target="_blank">
+        <a class="demo-btn" href="https://trishadar.github.io/WhyAreYouStillHere/" target="_blank">
           Open Live Demo →
         </a>
       </div>
 
       <iframe
-        src="https://your-github-username.github.io/project3"
+        src="https://trishadar.github.io/WhyAreYouStillHere/"
         title="Project 3 Live Demo">
       </iframe>
     </div>
