--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
   <!-- Projects -->
   <section id="projects">
 
+    <div class="projects-grid">
+
     <!-- Project 1 -->
     <div class="project-section">
       <div class="project-info">
         <h3>Project 1 – The Cards Know</h3>
         <p>
-          A fun and interactive web app that showcases frontend logic,
-          APIs, and creative UI design.
+          Description.
         </p>
         <a class="demo-btn" href="https://trishadar.github.io/TheCardsKnow/" target="_blank">
           Open Live Demo →
@@ -69,8 +70,7 @@
       <div class="project-info">
         <h3>Project 2 – Memory Map</h3>
         <p>
-          A project focused on user interaction, visuals, and clean
-          JavaScript logic.
+          Description.
         </p>
         <a class="demo-btn" href="https://trishadar.github.io/MemoryMap/" target="_blank">
           Open Live Demo →
@@ -88,8 +88,7 @@
       <div class="project-info">
         <h3>Project 3 – Why Are You Still Here</h3>
         <p>
-          A creative game built for fun and experimentation, highlighting
-          problem-solving and game mechanics.
+          Description.
         </p>
         <a class="demo-btn" href="https://trishadar.github.io/WhyAreYouStillHere/" target="_blank">
           Open Live Demo →
@@ -100,6 +99,8 @@
         src="https://trishadar.github.io/WhyAreYouStillHere/"
         title="Project 3 Live Demo">
       </iframe>
+    </div>
+
     </div>
 
   </section>
