--- a/index.html
+++ b/index.html
@@ -46,64 +46,56 @@
   <section id="projects">
 
     <div class="projects-grid">
+  <div class="project-card">
+    <video class="project-video" autoplay muted loop playsinline>
+    <source src="videos/BasketballDemo.mov" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+    <div class="project-info">
+      <h3>Basketball Stars Parody</h3>
+      <p>A 2D basketball game where you compete against friends. Built in Godot 4.4.1. Download and play.</p>
+    </div>
+    <div class="download-buttons">
+      <a href="downloads/BasketballStarsWindows.zip" class="btn">Windows</a>
+      <a href="downloads/BasketballStarsMac.zip" class="btn">Mac</a>
+      <a href="downloads/BasketballStarsLinux.zip" class="btn">Linux</a>
+    </div>
+  </div>
 
-    <!-- Project 1 -->
-    <div class="project-section">
-      <div class="project-info">
-        <h3>Project 1 – The Cards Know</h3>
-        <p>
-          Description.
-        </p>
-        <a class="demo-btn" href="https://trishadar.github.io/TheCardsKnow/" target="_blank">
+  <div class="project-card">
+    <iframe src="https://trishadar.github.io/TheCardsKnow/" class="project-live"></iframe>
+    <div class="project-info">
+      <h3>The Cards Know</h3>
+      <p>Description.</p>
+    <a class="demo-btn" href="https://trishadar.github.io/TheCardsKnow/" target="_blank">
           Open Live Demo →
         </a>
-      </div>
-
-      <iframe
-        src="https://trishadar.github.io/TheCardsKnow/"
-        title="Project 1 Live Demo">
-      </iframe>
     </div>
+  </div>
 
-    <!-- Project 2 -->
-    <div class="project-section alt">
-      <div class="project-info">
-        <h3>Project 2 – Memory Map</h3>
-        <p>
-          Description.
-        </p>
-        <a class="demo-btn" href="https://trishadar.github.io/MemoryMap/" target="_blank">
+  <div class="project-card">
+    <iframe src="https://trishadar.github.io/MemoryMap/" class="project-live"></iframe>
+    <div class="project-info">
+      <h3>Memory Map</h3>
+      <p>Description.</p>
+    <a class="demo-btn" href="https://trishadar.github.io/MemoryMap/" target="_blank">
           Open Live Demo →
         </a>
-      </div>
-
-      <iframe
-        src="https://trishadar.github.io/MemoryMap/"
-        title="Project 2 Live Demo">
-      </iframe>
     </div>
+  </div>
 
-    <!-- Project 3 -->
-    <div class="project-section">
-      <div class="project-info">
-        <h3>Project 3 – Why Are You Still Here</h3>
-        <p>
-          Description.
-        </p>
-        <a class="demo-btn" href="https://trishadar.github.io/WhyAreYouStillHere/" target="_blank">
+  <div class="project-card">
+    <iframe src="https://trishadar.github.io/WhyAreYouStillHere/" class="project-live"></iframe>
+    <div class="project-info">
+      <h3>Why Are You Still Here</h3>
+      <p>Description.</p>
+    <a class="demo-btn" href="https://trishadar.github.io/WhyAreYouStillHere/" target="_blank">
           Open Live Demo →
         </a>
-      </div>
-
-      <iframe
-        src="https://trishadar.github.io/WhyAreYouStillHere/"
-        title="Project 3 Live Demo">
-      </iframe>
     </div>
+  </div>
 
-    </div>
-
-  </section>
+</div>
 
   <!-- Contact -->
   <section id="contact">
