--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- Hero -->
   <header id="hero">
     <h1>Trisha Darure</h1>
-    <p>Web Developer • AI & Interactive Apps</p>
+    <p>Web Developer • Software Engineer</p>
     <a href="#projects" class="btn">See My Work</a>
   </header>
 
