added papas rotiria

--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
   </div>
 
   <div class="project-card">
+    <video class="project-video" autoplay muted loop playsinline>
+    <source src="videos/PapasRotiriaDemo.mov" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+    <div class="project-info">
+      <h3>Papa's Rotiria</h3>
+      <p>Description. Built in Godot 4.4.1. Download and play.</p>
+    </div>
+    <div class="download-buttons">
+      <a href="downloads/PapasRotiriaWindows.zip" class="btn">Windows</a>
+      <a href="downloads/PapasRotiriaMac.zip" class="btn">Mac</a>
+      <a href="downloads/PapasRotiriaLinux.zip" class="btn">Linux</a>
+    </div>
+  </div>
+
+  <div class="project-card">
     <iframe src="https://trishadar.github.io/TheCardsKnow/" class="project-live"></iframe>
     <div class="project-info">
       <h3>The Cards Know</h3>
