--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </video>
     <div class="project-info">
       <h3>Papa's Rotiria</h3>
-      <p>Description. Built in Godot 4.4.1. Download and play.</p>
+      <p>Make roti orders for hungry customers in this fun parody of Papa’s Pizzeria. Built in Godot 4.4.1. Download and play.</p>
     </div>
     <div class="download-buttons">
       <a href="downloads/PapasRotiriaWindows.zip" class="btn">Windows</a>
@@ -82,7 +82,7 @@
     <iframe src="https://trishadar.github.io/TheCardsKnow/" class="project-live"></iframe>
     <div class="project-info">
       <h3>The Cards Know</h3>
-      <p>Description.</p>
+      <p>A mind-reading web game inspired by Peter Answers—ask carefully!</p>
     <a class="demo-btn" href="https://trishadar.github.io/TheCardsKnow/" target="_blank">
           Open Live Demo →
         </a>
@@ -93,7 +93,7 @@
     <iframe src="https://trishadar.github.io/MemoryMap/" class="project-live"></iframe>
     <div class="project-info">
       <h3>Memory Map</h3>
-      <p>Description.</p>
+      <p>Map for my mom to add photos; a fun way to relive our memories.</p>
     <a class="demo-btn" href="https://trishadar.github.io/MemoryMap/" target="_blank">
           Open Live Demo →
         </a>
@@ -104,7 +104,7 @@
     <iframe src="https://trishadar.github.io/WhyAreYouStillHere/" class="project-live"></iframe>
     <div class="project-info">
       <h3>Why Are You Still Here</h3>
-      <p>Description.</p>
+      <p>A cheeky, judgemental website that comments on how long you linger.</p>
     <a class="demo-btn" href="https://trishadar.github.io/WhyAreYouStillHere/" target="_blank">
           Open Live Demo →
         </a>
