--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <div class="project-info">
       <h3>Basketball Stars Parody</h3>
       <p>A 2D basketball game where you compete against friends. Built in Godot 4.4.1. Download and play.</p>
+      <p class="project-tech">Godot 4.4 • GDScript</p>
     </div>
     <div class="download-buttons">
       <a href="downloads/BasketballStarsWindows.zip" class="btn">Windows</a>
@@ -70,6 +71,7 @@
     <div class="project-info">
       <h3>Papa's Rotiria</h3>
       <p>Make roti orders for hungry customers in this fun parody of Papa’s Pizzeria. Built in Godot 4.4.1. Download and play.</p>
+      <p class="project-tech">Godot 4.4 • GDScript</p>
     </div>
     <div class="download-buttons">
       <a href="downloads/PapasRotiriaWindows.zip" class="btn">Windows</a>
@@ -83,6 +85,7 @@
     <div class="project-info">
       <h3>The Cards Know</h3>
       <p>A mind-reading web game inspired by Peter Answers—ask carefully!</p>
+      <p class="project-tech">HTML • CSS • JavaScript</p>
     <a class="demo-btn" href="https://trishadar.github.io/TheCardsKnow/" target="_blank">
           Open Live Demo →
         </a>
@@ -94,6 +97,7 @@
     <div class="project-info">
       <h3>Memory Map</h3>
       <p>Map for my mom to add photos; a fun way to relive our memories.</p>
+      <p class="project-tech">HTML • CSS • JavaScript</p>
     <a class="demo-btn" href="https://trishadar.github.io/MemoryMap/" target="_blank">
           Open Live Demo →
         </a>
@@ -105,6 +109,7 @@
     <div class="project-info">
       <h3>Why Are You Still Here</h3>
       <p>A cheeky, judgemental website that comments on how long you linger.</p>
+      <p class="project-tech">HTML • CSS • JavaScript</p>
     <a class="demo-btn" href="https://trishadar.github.io/WhyAreYouStillHere/" target="_blank">
           Open Live Demo →
         </a>
