--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   </video>
     <div class="project-info">
       <h3>Basketball Stars Parody</h3>
-      <p>A 2D basketball game where you compete against friends. Built in Godot 4.4.1. Download and play.</p>
-      <p class="project-tech">Godot 4.4 • GDScript</p>
+      <p>A 2D basketball game where you compete against friends. Download and play.</p>
+      <p class="project-tech">Godot 4.4.1 • GDScript</p>
     </div>
     <div class="download-buttons">
       <a href="downloads/BasketballStarsWindows.zip" class="btn">Windows</a>
@@ -70,8 +70,8 @@
   </video>
     <div class="project-info">
       <h3>Papa's Rotiria</h3>
-      <p>Make roti orders for hungry customers in this fun parody of Papa’s Pizzeria. Built in Godot 4.4.1. Download and play.</p>
-      <p class="project-tech">Godot 4.4 • GDScript</p>
+      <p>Make roti orders for hungry customers in this fun parody of Papa’s Pizzeria. Download and play.</p>
+      <p class="project-tech">Godot 4.4.1 • GDScript</p>
     </div>
     <div class="download-buttons">
       <a href="downloads/PapasRotiriaWindows.zip" class="btn">Windows</a>
