--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
     <div class="container">
       <h2>About Me</h2>
       <p>
-        I’m a student developer who loves building interactive web apps, games,
-        and AI-powered projects. I focus on creativity, usability, and clean design.
+        I’m a student developer pursuing a BS in Computer Science at the University of Texas at Austin, 
+        with a passion for building interactive web apps, games, and AI-powered projects focused on 
+        creativity, usability, and clean design.
       </p>
     </div>
   </section>
@@ -45,6 +46,7 @@
   <!-- Projects -->
   <section id="projects">
 
+    <h2 class="project-section-title">Playable Games</h2>
     <div class="projects-grid">
   <div class="project-card">
     <video class="project-video" autoplay muted loop playsinline>
@@ -79,7 +81,10 @@
       <a href="downloads/PapasRotiriaLinux.zip" class="btn">Linux</a>
     </div>
   </div>
+</div>
 
+  <h2 class="project-section-title">Creative Web Experiments</h2>
+  <div class="projects-grid">
   <div class="project-card">
     <iframe src="https://trishadar.github.io/TheCardsKnow/" class="project-live"></iframe>
     <div class="project-info">
