added repo link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Trisha Darure | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+  />
 </head>
 <body>
 
@@ -63,6 +67,14 @@
       <a href="downloads/BasketballStarsMac.zip" class="btn">Mac</a>
       <a href="downloads/BasketballStarsLinux.zip" class="btn">Linux</a>
     </div>
+    <a
+      href="https://github.com/trishadar/BasketballStars"
+      target="_blank"
+      class="github-btn"
+      aria-label="View GitHub repository"
+    >
+      <i class="fab fa-github"></i>
+    </a>
   </div>
 
   <div class="project-card">
@@ -80,6 +92,14 @@
       <a href="downloads/PapasRotiriaMac.zip" class="btn">Mac</a>
       <a href="downloads/PapasRotiriaLinux.zip" class="btn">Linux</a>
     </div>
+     <a
+      href="https://github.com/trishadar/PapasRotiria"
+      target="_blank"
+      class="github-btn"
+      aria-label="View GitHub repository"
+    >
+      <i class="fab fa-github"></i>
+    </a>
   </div>
 </div>
 
@@ -95,6 +115,14 @@
           Open Live Demo →
         </a>
     </div>
+     <a
+      href="https://github.com/trishadar/TheCardsKnow"
+      target="_blank"
+      class="github-btn"
+      aria-label="View GitHub repository"
+    >
+      <i class="fab fa-github"></i>
+    </a>
   </div>
 
   <div class="project-card">
@@ -107,6 +135,14 @@
           Open Live Demo →
         </a>
     </div>
+     <a
+      href="https://github.com/trishadar/MemoryMap"
+      target="_blank"
+      class="github-btn"
+      aria-label="View GitHub repository"
+    >
+      <i class="fab fa-github"></i>
+    </a>
   </div>
 
   <div class="project-card">
@@ -119,6 +155,14 @@
           Open Live Demo →
         </a>
     </div>
+     <a
+      href="https://github.com/trishadar/WhyAreYouStillHere"
+      target="_blank"
+      class="github-btn"
+      aria-label="View GitHub repository"
+    >
+      <i class="fab fa-github"></i>
+    </a>
   </div>
 
 </div>
