added project tabi

--- a/index.html
+++ b/index.html
@@ -105,6 +105,30 @@
 
   <h2 class="project-section-title">Creative Web Experiments</h2>
   <div class="projects-grid">
+
+  <div class="project-card">
+   <video class="project-video" autoplay muted loop playsinline>
+    <source src="videos/TabiDemo.mov" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+    <div class="project-info">
+      <h3>Tabi Extension</h3>
+      <p>A cute browser-based Tamagotchi where you feed, play, and care for your virtual pet in real-time.</p>
+      <p class="project-tech">HTML • CSS • JavaScript</p>
+    <a class="demo-btn" href="https://trishadar.github.io/TheCardsKnow/" target="_blank">
+          Install →
+        </a>
+    </div>
+     <a
+      href="https://github.com/trishadar/Tabi"
+      target="_blank"
+      class="github-btn"
+      aria-label="View GitHub repository"
+    >
+      <i class="fab fa-github"></i>
+    </a>
+  </div>
+
   <div class="project-card">
     <iframe src="https://trishadar.github.io/TheCardsKnow/" class="project-live"></iframe>
     <div class="project-info">
