--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </video>
     <div class="project-info">
       <h3>Tabi Extension</h3>
-      <p>A cute browser-based Tamagotchi where you feed, play, and care for your virtual pet in real-time.</p>
+      <p>A cute browser-based Tamagotchi named Tabi where you feed, play, and care for your virtual pet in real-time.</p>
       <p class="project-tech">HTML • CSS • JavaScript</p>
     <a class="demo-btn" href="https://trishadar.github.io/TheCardsKnow/" target="_blank">
           Install →
