--- a/index.html
+++ b/index.html
@@ -50,6 +50,29 @@
   <!-- Projects -->
   <section id="projects">
 
+  <h2 class="project-section-title">AI-Powered Projects</h2>
+  <div class="projects-grid">
+    <div class="project-card">
+    <iframe src="https://cf-ai-internet-wrapped.pages.dev/" class="project-live"></iframe>
+    <div class="project-info">
+      <h3>Internet Wrapped</h3>
+      <p>AI-powered Internet traffic trends by country, delivered in a chatbot experience.</p>
+      <p class="project-tech">Cloudflare Workers • Cloudflare Pages • Cloudflare Radar API • Workers AI • Durable Objects • TypeScript • Wrangler CLI • HTML • CSS • JavaScript</p>
+    <a class="demo-btn" href="https://cf-ai-internet-wrapped.pages.dev/" target="_blank">
+          Open Live Demo →
+        </a>
+    </div>
+     <a
+      href="https://github.com/trishadar/cf_ai_internet_wrapped"
+      target="_blank"
+      class="github-btn"
+      aria-label="View GitHub repository"
+    >
+      <i class="fab fa-github"></i>
+    </a>
+  </div>
+  </div>
+
   <h2 class="project-section-title">Creative Web Experiments</h2>
   <div class="projects-grid">
 
@@ -101,7 +124,7 @@
     <div class="project-info">
       <h3>Memory Map</h3>
       <p>Map for my mom to add photos; a fun way to relive our memories.</p>
-      <p class="project-tech">HTML • CSS • JavaScript</p>
+      <p class="project-tech">Leaflet.js • Firebase Authentication • Firebase Firestore • OpenStreetMap • Nominatim API • HTML • CSS • JavaScript</p>
     <a class="demo-btn" href="https://trishadar.github.io/MemoryMap/" target="_blank">
           Open Live Demo →
         </a>
