--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <!-- Projects -->
   <section id="projects">
 
-  <h2 class="project-section-title">AI-Powered Projects</h2>
+  <h2 class="project-section-title">Technical Projects</h2>
   <div class="projects-grid">
     <div class="project-card">
     <iframe src="https://cf-ai-internet-wrapped.pages.dev/" class="project-live"></iframe>
