added proxy project

--- a/index.html
+++ b/index.html
@@ -71,6 +71,27 @@
       <i class="fab fa-github"></i>
     </a>
   </div>
+
+    <div class="project-card">
+    <video class="project-video" autoplay muted loop playsinline>
+    <source src="videos/GoEdgeProxyDemo.mov" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+    <div class="project-info">
+      <h3>Go Edge Proxy</h3>
+      <p>A high-performance reverse proxy that supports multiple backend servers with round-robin load balancing, per-IP rate limiting, request logging, real-time metrics, and graceful shutdown.</p>
+      <p class="project-tech">Go</p>
+    </div>
+     <a
+      href="https://github.com/trishadar/go-edge-proxy"
+      target="_blank"
+      class="github-btn"
+      aria-label="View GitHub repository"
+    >
+      <i class="fab fa-github"></i>
+    </a>
+  </div>
+
   </div>
 
   <h2 class="project-section-title">Creative Web Experiments</h2>
