--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <h3>Tabi Extension</h3>
       <p>A cute browser-based Tamagotchi named Tabi where you feed, play, and care for your virtual pet in real-time.</p>
       <p class="project-tech">HTML • CSS • JavaScript</p>
-    <a class="demo-btn" href="https://trishadar.github.io/TheCardsKnow/" target="_blank">
+    <a class="demo-btn" href="https://chromewebstore.google.com/detail/tabi/fmlbdfojemkmbahggjkhbmckbbchodpl?authuser=0&hl=en" target="_blank">
           Install →
         </a>
     </div>
